modified:   templates/personal_report.html

--- a/templates/personal_report.html
+++ b/templates/personal_report.html
@@ -6,7 +6,7 @@
     {% block content %}
     <h1>>{{ person_dict["3.1"] }}, {{ person_dict["3.2"] }}, {{ person_dict["3.3"] }}</h1>
     <span>За {{ gen_info["Месец"] }}, {{ gen_info["Година"] }} г.</span>s
-    Работни часови: {{ person_dict["3.6"] }}
+    <span>Работни часови: {{ person_dict["3.6"] }}</span>
         
     <table>
     <tr>
